# sapphireppplot

./: .gitignore  .spellcheck-whitelist  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: test-examples.yml  test-miniconda.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.md  tips.md
docs/examples/: jupyter_tutorial.ipynb  plot_quick_start.md
docs/modules/: athena.rst  mhd.rst  numpyify.rst  plot_properties.rst  plot_properties_athena.rst  plot_properties_mhd.rst  plot_properties_satanic.rst  plot_properties_vfp.rst  pvload.rst  pvplot.rst  satanic.rst  transform.rst  utils.rst  vfp.rst
examples/: create_logo.py  jupyter_tutorial.ipynb  plot_quick_start.py
src/sapphireppplot/: __init__.py  athena.py  load.py  mhd.py  numpyify.py  plot.py  plot1d.py  plot_properties.py  plot_properties_athena.py  plot_properties_mhd.py  plot_properties_satanic.py  plot_properties_vfp.py  pvload.py  pvplot.py  satanic.py  transform.py  utils.py  vfp.py
