[metadata]
name = sapphireppplot
Version = 0.0.1
description = A ParaView Python package to plot the results from Sapphire++
long_description = file: README.md
author = Florian Schulze
author_email = florian.schulze@mpi-hd.mpg.de
url = https://github.com/floschulze/sapphireppplot
license = LGPL-2.1

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.13

install_requires =
    numpy
    ; paraview >= 5.13

[options.packages.find]
where = src

; [options.extra.require]
; docs=
;     sphinx
; test =
;   pytest
;   pytest-doctestplus
;   flake8
;   codecov
;   pytest-cov
