[metadata]
name = sapphireppplot
Version = 0.0.1
description = A ParaView Python package to plot the results from Sapphire++
long_description = file: README.md
author = Florian Schulze
author_email = florian.schulze@mpi-hd.mpg.de
url = https://github.com/sapphireppplot/sapphireppplot
license = LGPL-2.1

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.13

install_requires =
    numpy
    ; paraview ==5.13.3

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
test =
    black
    flake8
;   pytest
;   pytest-doctestplus
;   codecov
;   pytest-cov
; docs=
;     sphinx

[flake8]
extend-ignore =
    # line to long (handled by black)
    E501 
