[metadata]
name = sapphireppplot
Version = 0.0.1
description = A ParaView Python package to plot the results from Sapphire++
long_description = file: README.md
author = Florian Schulze
author_email = florian.schulze@mpi-hd.mpg.de
url = https://github.com/sapphireppplot/sapphireppplot
license = LGPL-2.1

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.13

install_requires =
    numpy
    ; paraview ==5.13.3

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    flake8-unused-arguments
    flake8-annotations
    flake8-docstrings
    flake8-spellcheck
test =
    black
    flake8
    flake8-unused-arguments
    flake8-annotations
    flake8-docstrings
    flake8-spellcheck
;   pytest
;   pytest-doctestplus
;   codecov
;   pytest-cov
; docs=
;     sphinx

[flake8]
extend-ignore =
    # line to long (handled by black)
    E501
    # No annotations for self
    ANN101
    # No docstring needed for magic methods
    D105
    # Allow one-line docstring on multiline
    D200
docstring-convention = numpy
dictionaries = en_US,python,technical
whitelist = .spellcheck-whitelist
